option java_package = "chatapp.RoomService";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service  ChatRoomService {
  rpc joinChatRoom(JoinChatRoomRequest) returns (ChatRoomResponse){}
  rpc createChatRoom(CreateChatRoomRequest) returns (CreateChatRoomResponse){}
  rpc removeChatRoom(RemoveChatRoomRequest) returns (stream RemoveChatRoomResponse){}
  rpc getChatRooms(stream google.protobuf.Empty) returns (stream GetChatRoomResponse);
}

message JoinChatRoomRequest {
  optional int32 roomId = 1;
  optional int32 userId = 2;
}

message ChatRoomResponse {
  optional string roomName = 1;
  optional int32 roomId = 2;
}

message CreateChatRoomRequest {
  optional int32 roomId = 1;
  optional string roomName = 2;
  optional int32 userId = 3;
}

message CreateChatRoomResponse {
  optional string roomName = 1;
  optional int32 roomId = 2;
}

message RemoveChatRoomRequest {
  optional int32 roomId = 1;
  optional int32 userId = 2;
}

message RemoveChatRoomResponse {
  optional bool wasRemoved = 1;
}

message GetChatRoomResponse {
  repeated ChatRoomResponse rooms = 1;
  optional bool isInitialData = 2;
}
